Fixed supported versions occasionally being too big

--- a/resources/style.css
+++ b/resources/style.css
@@ -152,7 +152,7 @@ body {
 .supportver {
   padding-left: 0px;
   background: rgb(37, 37, 37);
-  border-radius: 3vw;
+  border-radius: 2vw;
   font-size: 1.45vw;
 }
 .alphatag {
